RESOLVED FIXED266501
[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-contain/contain-size-005.html
https://bugs.webkit.org/show_bug.cgi?id=266501
Summary [IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-contain/contain-size-...
alan
Reported 2023-12-15 13:11:54 PST
ssia
Attachments
[fast-cq]Patch (1.56 KB, patch)
2023-12-15 13:21 PST, alan
no flags
alan
Comment 1 2023-12-15 13:21:13 PST
Created attachment 469072 [details] [fast-cq]Patch
EWS
Comment 2 2023-12-16 04:33:40 PST
Committed 272177@main (4645f3376ef6): <https://commits.webkit.org/272177@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469072 [details].
Radar WebKit Bug Importer
Comment 3 2023-12-16 04:34:14 PST
Note You need to log in before you can comment on or make changes to this bug.