[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-contain/contain-size-005.html https://bugs.webkit.org/show_bug.cgi?id=266501

Reviewed by Antti Koivisto.

Size containment does not to apply to ruby annotations.

* Source/WebCore/rendering/RenderElementInlines.h:
(WebCore::RenderElement::shouldApplySizeOrStyleContainment const):

Canonical link: https://commits.webkit.org/272177@main